# dotbox-mcp

./: .dockerignore  .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-sandbox-images.yml  publish-server.yml  release-please.yml
doc/: dotbox_mcp_plan.md
docker/: build-images.sh  dotnet-10-rc2.dockerfile  dotnet-10.dockerfile  dotnet-8.dockerfile  dotnet-9.dockerfile
docs/: llm_guidance.md
scripts/: build-docker-dev.sh  install-claude-desktop.ps1  install-claude-desktop.sh  install.sh  toggle-claude-config.py  toggle-claude-desktop-config.py
src/: __init__.py  __main__.py  docker_manager.py  executor.py  formatter.py  models.py  server.py
tests/: __init__.py  test_docker_manager.py  test_e2e_integration.py  test_executor.py  test_formatter.py  test_integration.py  test_models.py  test_server_lifecycle.py
